fixed text-overflow: ellipsis on small screens

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -205,6 +205,7 @@ input, button
   &.sidebar-2
     grid-area: sidebar-2
     background: $bg-sidebar-2
+    overflow: hidden
   .side-section
     margin: 2em 0
   .author-info
